--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ repositories {
 dependencies {
     compile group: 'uk.co.caprica', name: 'vlcj', version: '3.+'
     compile group: 'net.java.dev.jna', name: 'platform', version: '3.5.2'
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
 
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
