Fixing git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@
 .idea/**/sqlDataSources.xml
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
+.idea/**
+build/**
+classes/**
+watchFolders/**
 
 # Gradle:
 .idea/**/gradle.xml
