--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     compile group: 'net.java.dev.jna', name: 'platform', version: '3.5.2'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
-
+    compile group: 'org.controlsfx', name: 'controlsfx', version: '8.40.12'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
